perf: iroiro2
